--- a/autotest/test-output/index.html
+++ b/autotest/test-output/index.html
@@ -102,7 +102,7 @@
                     <div class="method-list-content failed suite-Default_suite">
                       <span>
                         <img width="3%" src="failed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="testcase.TestCase" hash-for-method="testLoginError">testLoginError</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="testcase.LoginTest" hash-for-method="f2">f2</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content failed suite-Default_suite -->
@@ -116,7 +116,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="testcase.TestCase" hash-for-method="testLoginSuccess">testLoginSuccess</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="testcase.LoginTest" hash-for-method="f1">f1</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -134,37 +134,43 @@
           <div class="suite-Default_suite-class-failed">
             <div class="main-panel-header rounded-window-top">
               <img src="failed.png"/>
-              <span class="class-name">testcase.TestCase</span>
+              <span class="class-name">testcase.LoginTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="testLoginError">
-                  </a> <!-- testLoginError -->
-                  <span class="method-name">testLoginError</span>
-                  <div class="stack-trace">org.openqa.selenium.NoSuchElementException: no such element: Unable to locate element: {&quot;method&quot;:&quot;xpath&quot;,&quot;selector&quot;:&quot;//a[text()=&apos; 退出&apos;]&quot;}
-  (Session info: chrome=80.0.3987.149)
-  (Driver info: chromedriver=80.0.3987.16 (320f6526c1632ad4f205ebce69b99a062ed78647-refs/branch-heads/3987@{#185}),platform=Mac OS X 10.12.6 x86_64) (WARNING: The server did not provide any stacktrace information)
-Command duration or timeout: 21 milliseconds
-For documentation on this error, please visit: http://seleniumhq.org/exceptions/no_such_element.html
+                  <a name="f2">
+                  </a> <!-- f2 -->
+                  <span class="method-name">f2</span>
+                  <div class="stack-trace">org.openqa.selenium.WebDriverException: Returned value cannot be converted to WebElement: {stacktrace=0   chromedriver                        0x0000000102d4dec9 chromedriver + 3837641
+1   chromedriver                        0x0000000102ce7cc3 chromedriver + 3419331
+2   chromedriver                        0x0000000102a5c042 chromedriver + 749634
+3   chromedriver                        0x00000001029bf4cc chromedriver + 107724
+4   chromedriver                        0x00000001029e5f2c chromedriver + 266028
+5   chromedriver                        0x00000001029e4342 chromedriver + 258882
+6   chromedriver                        0x00000001029e3b87 chromedriver + 256903
+7   chromedriver                        0x00000001029aa079 chromedriver + 20601
+8   chromedriver                        0x0000000102d0fa5f chromedriver + 3582559
+9   chromedriver                        0x0000000102d1c9ea chromedriver + 3635690
+10  chromedriver                        0x0000000102d1c787 chromedriver + 3635079
+11  chromedriver                        0x0000000102cf33d9 chromedriver + 3466201
+12  chromedriver                        0x0000000102d1d2a7 chromedriver + 3637927
+13  chromedriver                        0x0000000102d05867 chromedriver + 3541095
+14  chromedriver                        0x00000001029a7ad7 chromedriver + 10967
+15  libdyld.dylib                       0x00007fffa932e235 start + 1
+16  ???                                 0x0000000000000002 0x0 + 2
+, error=invalid session id, message=invalid session id}
 Build info: version: &apos;2.40.0&apos;, revision: &apos;4c5c0568b004f67810ee41c459549aa4b09c651e&apos;, time: &apos;2014-02-19 11:13:01&apos;
 System info: host: &apos;jiubugaosunideMacBook-Pro.local&apos;, ip: &apos;192.168.2.105&apos;, os.name: &apos;Mac OS X&apos;, os.arch: &apos;x86_64&apos;, os.version: &apos;10.12.6&apos;, java.version: &apos;1.8.0_191&apos;
-Driver info: org.openqa.selenium.chrome.ChromeDriver
-Capabilities [{mobileEmulationEnabled=false, timeouts={implicit=0, pageLoad=300000, script=30000}, hasTouchScreen=false, platform=MAC, acceptSslCerts=false, goog:chromeOptions={debuggerAddress=localhost:63894}, acceptInsecureCerts=false, webStorageEnabled=true, browserName=chrome, takesScreenshot=true, javascriptEnabled=true, setWindowRect=true, unexpectedAlertBehaviour=ignore, applicationCacheEnabled=false, rotatable=false, networkConnectionEnabled=false, chrome={chromedriverVersion=80.0.3987.16 (320f6526c1632ad4f205ebce69b99a062ed78647-refs/branch-heads/3987@{#185}), userDataDir=/var/folders/nd/v6qfnlyj7gq_l728vhl8zc0h0000gn/T/.com.google.Chrome.OXypIE}, takesHeapSnapshot=true, pageLoadStrategy=normal, strictFileInteractability=false, databaseEnabled=false, handlesAlerts=true, version=80.0.3987.149, browserConnectionEnabled=false, proxy={}, nativeEvents=true, locationContextEnabled=true, cssSelectorsEnabled=true}]
-Session ID: 04becd22edfb829f989c50858d1f3bb6
-	at sun.reflect.NativeConstructorAccessorImpl.newInstance0(Native Method)
-	at sun.reflect.NativeConstructorAccessorImpl.newInstance(NativeConstructorAccessorImpl.java:62)
-	at sun.reflect.DelegatingConstructorAccessorImpl.newInstance(DelegatingConstructorAccessorImpl.java:45)
-	at java.lang.reflect.Constructor.newInstance(Constructor.java:423)
-	at org.openqa.selenium.remote.ErrorHandler.createThrowable(ErrorHandler.java:193)
-	at org.openqa.selenium.remote.ErrorHandler.throwIfResponseFailed(ErrorHandler.java:145)
-	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:573)
-	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:326)
-	at org.openqa.selenium.remote.RemoteWebDriver.findElementByXPath(RemoteWebDriver.java:423)
-	at org.openqa.selenium.By$ByXPath.findElement(By.java:357)
+Driver info: driver.version: RemoteWebDriver
+	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:333)
+	at org.openqa.selenium.remote.RemoteWebDriver.findElementById(RemoteWebDriver.java:367)
+	at org.openqa.selenium.By$ById.findElement(By.java:214)
 	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:318)
-	at testcase.TestCase.loginResult(TestCase.java:39)
-	at testcase.TestCase.testLoginError(TestCase.java:51)
+	at pages.BasePage.findElement(BasePage.java:33)
+	at pages.LoginPage.getUserElement(LoginPage.java:26)
+	at handles.Loginhandle.login(Loginhandle.java:17)
+	at testcase.LoginTest.f2(LoginTest.java:31)
 	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
 	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
@@ -189,6 +195,9 @@ Session ID: 04becd22edfb829f989c50858d1f3bb6
 	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:132)
 	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:236)
 	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:81)
+Caused by: java.lang.ClassCastException: com.google.common.collect.Maps$TransformedEntriesMap cannot be cast to org.openqa.selenium.WebElement
+	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:331)
+	... 31 more
 
 </div> <!-- stack-trace -->
                 </div> <!-- method-content -->
@@ -198,14 +207,14 @@ Session ID: 04becd22edfb829f989c50858d1f3bb6
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">testcase.TestCase</span>
+              <span class="class-name">testcase.LoginTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="testLoginSuccess">
-                  </a> <!-- testLoginSuccess -->
-                  <span class="method-name">testLoginSuccess</span>
+                  <a name="f1">
+                  </a> <!-- f1 -->
+                  <span class="method-name">f1</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -213,7 +222,7 @@ Session ID: 04becd22edfb829f989c50858d1f3bb6
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/private/var/folders/nd/v6qfnlyj7gq_l728vhl8zc0h0000gn/T/testng-eclipse-1630480628/testng-customsuite.xml</span>
+            <span class="header-content">/private/var/folders/nd/v6qfnlyj7gq_l728vhl8zc0h0000gn/T/testng-eclipse--1146855774/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -222,7 +231,7 @@ Session ID: 04becd22edfb829f989c50858d1f3bb6
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;testcase.TestCase&quot;/&gt;
+      &lt;class name=&quot;testcase.LoginTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -264,18 +273,18 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'testLoginSuccess')
-data.setCell(0, 2, 'testcase.TestCase')
-data.setCell(0, 3, 1912);
+data.setCell(0, 1, 'f1')
+data.setCell(0, 2, 'testcase.LoginTest')
+data.setCell(0, 3, 1184);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'testLoginError')
-data.setCell(1, 2, 'testcase.TestCase')
-data.setCell(1, 3, 1660);
+data.setCell(1, 1, 'f2')
+data.setCell(1, 2, 'testcase.LoginTest')
+data.setCell(1, 3, 20);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 3 seconds</span>
+              <span class="suite-total-time">Total running time: 1 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -301,17 +310,49 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">testcase.TestCase</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">testcase.LoginTest</div> <!-- chronological-class-name -->
+              <div class="configuration-test before">
+                <span class="method-name">beforeTest</span>
+                <span class="method-start">0 ms</span>
+              </div> <!-- configuration-test before -->
+              <div class="configuration-class before">
+                <span class="method-name">beforeClass</span>
+                <span class="method-start">12 ms</span>
+              </div> <!-- configuration-class before -->
+              <div class="configuration-method before">
+                <span class="method-name">beforeMethod</span>
+                <span class="method-start">15 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">f1</span>
+                <span class="method-start">3691 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">afterMethod</span>
+                <span class="method-start">4876 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">beforeMethod</span>
+                <span class="method-start">5047 ms</span>
+              </div> <!-- configuration-method before -->
               <div class="test-method">
                 <img src="failed.png">
                 </img>
-                <span class="method-name">testLoginError</span>
-                <span class="method-start">0 ms</span>
+                <span class="method-name">f2</span>
+                <span class="method-start">5058 ms</span>
               </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">testLoginSuccess</span>
-                <span class="method-start">11674 ms</span>
-              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">afterMethod</span>
+                <span class="method-start">15093 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-class after">
+                <span class="method-name">afterClass</span>
+                <span class="method-start">15097 ms</span>
+              </div> <!-- configuration-class after -->
+              <div class="configuration-test after">
+                <span class="method-name">afterTest</span>
+                <span class="method-start">15101 ms</span>
+              </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
