--- a/autotest/test-output/old/Default suite/methods.html
+++ b/autotest/test-output/old/Default suite/methods.html
@@ -1,8 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="fbd876">  <td>20/03/24 21:51:48</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase.testLoginError()[pri:0, instance:testcase.TestCase@4c583ecf]">testLoginError</td> 
-  <td>main@231756373</td>   <td></td> </tr>
-<tr bgcolor="fbd876">  <td>20/03/24 21:52:00</td>   <td>11673</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase.testLoginSuccess()[pri:0, instance:testcase.TestCase@4c583ecf]">testLoginSuccess</td> 
-  <td>main@231756373</td>   <td></td> </tr>
+<tr bgcolor="fbd876">  <td>20/03/27 12:24:57</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;LoginTest.beforeTest()[pri:0, instance:testcase.LoginTest@14cd1699]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@208866101</td>   <td></td> </tr>
+<tr bgcolor="fbd876">  <td>20/03/27 12:24:57</td>   <td>9</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.beforeClass()[pri:0, instance:testcase.LoginTest@14cd1699]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@208866101</td>   <td></td> </tr>
+<tr bgcolor="fbd876">  <td>20/03/27 12:24:57</td>   <td>12</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.beforeMethod()[pri:0, instance:testcase.LoginTest@14cd1699]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@208866101</td>   <td></td> </tr>
+<tr bgcolor="fbd876">  <td>20/03/27 12:25:01</td>   <td>3688</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.f1()[pri:0, instance:testcase.LoginTest@14cd1699]">f1</td> 
+  <td>main@208866101</td>   <td></td> </tr>
+<tr bgcolor="fbd876">  <td>20/03/27 12:25:02</td>   <td>4873</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.afterMethod()[pri:0, instance:testcase.LoginTest@14cd1699]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@208866101</td>   <td></td> </tr>
+<tr bgcolor="fbd876">  <td>20/03/27 12:25:02</td>   <td>5044</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.beforeMethod()[pri:0, instance:testcase.LoginTest@14cd1699]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@208866101</td>   <td></td> </tr>
+<tr bgcolor="fbd876">  <td>20/03/27 12:25:02</td>   <td>5055</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.f2()[pri:0, instance:testcase.LoginTest@14cd1699]">f2</td> 
+  <td>main@208866101</td>   <td></td> </tr>
+<tr bgcolor="fbd876">  <td>20/03/27 12:25:12</td>   <td>15090</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.afterMethod()[pri:0, instance:testcase.LoginTest@14cd1699]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@208866101</td>   <td></td> </tr>
+<tr bgcolor="fbd876">  <td>20/03/27 12:25:12</td>   <td>15094</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.afterClass()[pri:0, instance:testcase.LoginTest@14cd1699]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@208866101</td>   <td></td> </tr>
+<tr bgcolor="fbd876">  <td>20/03/27 12:25:12</td>   <td>15098</td> <td>&nbsp;</td><td title="&lt;&lt;LoginTest.afterTest()[pri:0, instance:testcase.LoginTest@14cd1699]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@208866101</td>   <td></td> </tr>
 </table>
